[package]
name = "ebi_derive"
version = "0.2.1"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = []
categories = ["command-line-utilities"]
description = "A stochastic process mining utility - derive macros"
homepage = "https://ebitools.org"
repository = "https://github.com/BPM-Research-Group/Ebi_derive"
readme = "README.md"

[dependencies]
syn = "2.0.106"
quote = "1.0.40"
darling = "0.21.3"

[lib]
proc-macro = true