[package]
name = "ebi_derive"
version = "0.2.5"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = []
categories = ["command-line-utilities"]
description = "A stochastic process mining utility - derive macros"
homepage = "https://ebitools.org"
repository = "https://github.com/BPM-Research-Group/Ebi_derive"
readme = "README.md"

[dependencies]
syn = "2.0.106"
quote = "1.0.41"
darling = "0.21.3"
strum_macros = "0.27.2"

[lib]
proc-macro = true